fix header responsiveness on safari + added meta

--- a/app/scss/About.scss
+++ b/app/scss/About.scss
@@ -46,7 +46,7 @@
 
       .explore-background {
         width: 250px;
-        height: 250px;
+        height: 275px;
         position: absolute;
         margin-left: -5px;
         box-shadow: 1px 1px 15px #ABAABA;
