--- a/app/scss/Header.scss
+++ b/app/scss/Header.scss
@@ -31,6 +31,10 @@
       height: 100%;
       margin: 0 auto;
 
+      @media (max-width: 1200px) {
+        width: 80%;
+      }
+
       display: flex;
       display: -webkit-flex;
       display: -ms-flexbox;
@@ -55,7 +59,9 @@
       }
 
       .description-wrapper {
-        width: 100%;
+        width: calc(100% - 261px);
+        height: 100%;
+
 
         .description {
           position: relative;
@@ -185,6 +191,9 @@
         }
 
         .description-wrapper {
+          width: 100%;
+          // height: 40%;
+
 
           .description {
             h1 {
@@ -236,10 +245,10 @@
         width: 90%;
         flex-wrap: wrap;
         .logo {
-          height: auto;
+          height: 70%;
           margin-bottom: -4em;
           svg {
-            width: 120px;
+            width: 80%;
             display: block;
             margin: 0 auto;
           }
@@ -249,6 +258,7 @@
         .description-wrapper {
           font-size: 0.8em;
           text-align: center;
+          height: 25%;
 
           .description {
             padding-left: 0px;
